--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <h1>MARAMORI</h1>
-        <p>ვებსაიტი მზადების პროცესშია. მალე დავბრუნდებით!</p>
+        <p>The website is under construction. We'll be back soon!</p>
     </div>
 </body>
 </html>
